# ai-capitalS-mvp

./: .env.example  .gitignore  CHANGELOG_ISLAMIC_FINANCE.md  Dockerfile  Dockerfile.patch  INSTALL.md  INSTALL_TZ_UPDATE.md  PHASE0_REPORT.md  README.md  ai_svc.b64  alembic.ini  analytics_page.tsx  calculator_export.py  calculator_history.py  calculator_page.tsx  check.py  check_imports.py  compare_page.tsx  consolidation_router.py  create_security.py  ctx.py  decisions_page.tsx  deploy_stage6.ps1  deploy_stage6.py  deploy_stage6_frontend.ps1  deploy_stage6_frontend.py  docker-compose.yml  findall.py  fix2.py  fix3.py  fix4.py  fix_db.py  fix_encoding.py  fix_gics.py  fix_imports.py  fix_market2.py  fix_market_page.py  fix_mode.py  fix_sb.py  fix_session.py  (+39 more)
alembic/: env.py
app/: main.py
docs/: api_reference.md  demo_script_ru.md  islamic_finance_module.md  islamic_finance_reference_data.md  islamic_finance_validation.md  olap_implementation_guide.md  user_guide_ru.md
fix_stage2/: INSTALL.md
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
islamic_frontend/: README.md
islamic_stage1/: README.md  main_py_fragment.py
scripts/: seed_companies.py  seed_islamic.py
seeds/: islamic_glossary_terms.json  islamic_products.json  islamic_reference_registry.json  posc_rules.json  product_recommendation_rules.json  seed_all.py  shariah_screening_companies.json
tests/: conftest.py  cross_browser_checklist.md  load_test_report.md  locustfile.py  mobile_test_checklist.md  test_auth.py  test_company_lookup.py  (+18 more)
(+451 files in other folders)
